--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,7 +2,7 @@
   "name": "aircrhysalis",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
+    "dev": "svelte-kit dev --https",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
