--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,7 +15,9 @@
     "smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
   },
   "devDependencies": {
+    "0xsequence": "^0.37.1",
     "@0xsequence/ethauth": "^0.7.0",
+    "@smui-extra/accordion": "^6.0.0-beta.16",
     "@smui/button": "^6.0.0-beta.13",
     "@smui/card": "^6.0.0-beta.13",
     "@smui/circular-progress": "^6.0.0-beta.16",
@@ -32,7 +34,6 @@
     "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
-    "0xsequence": "^0.37.1",
     "autoprefixer": "^10.4.2",
     "axios": "^0.27.2",
     "cssnano": "^5.0.16",
