--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,7 +15,6 @@
     "smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
   },
   "devDependencies": {
-    "0xsequence": "^0.37.1",
     "@0xsequence/ethauth": "^0.7.0",
     "@smui-extra/accordion": "^6.0.0-beta.16",
     "@smui/button": "^6.0.0-beta.13",
@@ -52,7 +51,8 @@
     "svelte-preprocess": "^4.9.4",
     "tailwindcss": "^3.0.17",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vite": "^3.0.0"
   },
   "type": "module"
 }
