--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "package": "vite package",
+    "preview": "vite preview",
+    "check": "vite --tsconfig ./tsconfig.json",
+    "check:watch": "vite --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
