--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,7 +30,7 @@
     "@smui/tooltip": "^6.0.0-beta.13",
     "@smui/top-app-bar": "^6.0.0-beta.13",
     "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-netlify": "1.0.0-next.65",
+    "@sveltejs/adapter-netlify": "next",
     "@sveltejs/kit": "next",
     "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
