--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,8 +6,8 @@
     "build": "vite build",
     "package": "vite package",
     "preview": "vite preview",
-    "check": "vite --tsconfig ./tsconfig.json",
-    "check:watch": "vite --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
@@ -29,9 +29,9 @@
     "@smui/textfield": "^6.0.0-beta.13",
     "@smui/tooltip": "^6.0.0-beta.13",
     "@smui/top-app-bar": "^6.0.0-beta.13",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-netlify": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "1.0.0-next.71",
+    "@sveltejs/adapter-netlify": "1.0.0-next.71",
+    "@sveltejs/kit": "1.0.0-next.476",
     "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
