fix modal (omg)

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,33 +11,33 @@
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
-    "smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
+    "smui-theme-light": "smui-theme compile static/smui.css -i src/theme/dark",
     "smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
   },
   "devDependencies": {
-    "0xsequence": "^0.37.1",
     "@0xsequence/ethauth": "^0.7.0",
     "@smui-extra/accordion": "^6.0.0-beta.16",
     "@smui/button": "^6.0.0-beta.13",
     "@smui/card": "^6.0.0-beta.13",
     "@smui/circular-progress": "^6.0.0-beta.16",
     "@smui/data-table": "^6.0.0-beta.13",
+    "@smui/dialog": "^6.0.0-beta.13",
     "@smui/fab": "^6.0.0",
+    "@smui/form-field": "^6.0.0-beta.13",
     "@smui/icon-button": "^6.0.0-beta.16",
     "@smui/linear-progress": "^6.0.0-beta.13",
     "@smui/paper": "^6.0.0-beta.13",
+    "@smui/slider": "^6.0.0-beta.13",
     "@smui/textfield": "^6.0.0-beta.13",
     "@smui/tooltip": "^6.0.0-beta.13",
     "@smui/top-app-bar": "^6.0.0-beta.13",
-    "@smui/dialog": "^7.0.0-beta.0",
-    "@smui/form-field": "^7.0.0-beta.0",
-    "@smui/slider": "^7.0.0-beta.0",
     "@sveltejs/adapter-auto": "1.0.0-next.71",
     "@sveltejs/adapter-netlify": "1.0.0-next.71",
     "@sveltejs/kit": "1.0.0-next.476",
     "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "0xsequence": "^0.37.1",
     "autoprefixer": "^10.4.2",
     "axios": "^0.27.2",
     "cssnano": "^5.0.16",
@@ -50,7 +50,7 @@
     "postcss": "^8.4.5",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.6.0",
-    "smui-theme": "^6.0.0-beta.13",
+    "smui-theme": "^6.2.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
